Adds new module "dbconn".
The new module currently contains POJO classes that are modeled after
the database entities. It also contains a configuration file for the
database connection and entity factory(hibernate.cfg).

--- a/project/projects/pom.xml
+++ b/project/projects/pom.xml
@@ -12,5 +12,7 @@
    </parent>
    <modules>
       <module>logging</module>
+      <module>dbconn</module>
+      <module>dao</module>
    </modules>
 </project>
